chore: mocking cosmos connection in test